--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.0"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
