게시판 화면 코딩 및 로그인 화면 처리(진행중)

--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,5 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 NEXT_PUBLIC_API_ENDPOINT=http://localhost:8081
 NEXT_PUBLIC_CODENBUTTER_SITE_ID=
+RESOURCE_COMMON_API_ENDPOINT=http://localhost:8080
+RESOURCE_GHG_API_ENDPOINT=http://localhost:8081
