--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+DEFAULT_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
 # https://generate-secret.vercel.app/32 반드시 변경하세요
 NEXTAUTH_SECRET=1234
