인증처리 수정

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
-NEXTAUTH_URL=http://localhost:8081
+DEFAULT_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=1234
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
