로그인 버튼 추가 및 nextauth 추가

--- a/.env.development
+++ b/.env.development
@@ -7,5 +7,5 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 NEXT_PUBLIC_API_ENDPOINT=http://localhost:8081
 NEXT_PUBLIC_CODENBUTTER_SITE_ID=
-NEXT_PUBLIC_COMMON_API_ENDPOINT=http://localhost:8080
+NEXT_PUBLIC_COMMON_API_ENDPOINT=http://127.0.0.1:8080
 NEXT_PUBLIC_GHG_API_ENDPOINT=http://localhost:8081
