comment 화면 작업 데이터 연동 X

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,7 @@
   "nuxt.isNuxtApp": false,
   "i18n-ally.localesPaths": [
     "messages"
-  ]
+  ],
+  "prettier.tabWidth": 4,
+  "prettier.useTabs": true
 }
